--- a/GosueSportClient/GosueSportClientPresentacion.csproj
+++ b/GosueSportClient/GosueSportClientPresentacion.csproj
@@ -46,14 +46,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="BlockScreen.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="BlockScreen.Designer.cs">
+      <DependentUpon>BlockScreen.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TimeCounterForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TimeCounterForm.Designer.cs">
+      <DependentUpon>TimeCounterForm.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="BlockScreen.resx">
+      <DependentUpon>BlockScreen.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -62,7 +71,11 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="TimeCounterForm.resx">
+      <DependentUpon>TimeCounterForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -81,6 +94,15 @@
       <Project>{d490a3a4-8c7d-4589-b6cf-2147927678e1}</Project>
       <Name>CapaLogica</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\GosueBlockScreen.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\dragonIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\minimize.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
