--- a/CapaModelo/CapaModelo.csproj
+++ b/CapaModelo/CapaModelo.csproj
@@ -44,11 +44,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Common\WebSocketConstants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Request\WebSocketRequest.cs" />
+    <Compile Include="Response\ActionResponse.cs" />
+    <Compile Include="Response\TimeResponse.cs" />
+    <Compile Include="Common\TipeAction.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
