--- a/GosueSportClient/GosueSportClientPresentacion.csproj
+++ b/GosueSportClient/GosueSportClientPresentacion.csproj
@@ -47,6 +47,9 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="websocket-sharp-core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\websocketsharp.core.1.0.0\lib\netstandard2.0\websocket-sharp-core.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BlockScreen.cs">
@@ -55,6 +58,7 @@
     <Compile Include="BlockScreen.Designer.cs">
       <DependentUpon>BlockScreen.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TimeCounterForm.cs">
