--- a/GosueSportClient/GosueSportClientPresentacion.csproj
+++ b/GosueSportClient/GosueSportClientPresentacion.csproj
@@ -58,7 +58,9 @@
     <Compile Include="BlockScreen.Designer.cs">
       <DependentUpon>BlockScreen.cs</DependentUpon>
     </Compile>
+    <Compile Include="CounterThread.cs" />
     <Compile Include="FormController.cs" />
+    <Compile Include="OnNotificateCounterEnd.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TimeCounterForm.cs">
@@ -102,6 +104,10 @@
       <Project>{d490a3a4-8c7d-4589-b6cf-2147927678e1}</Project>
       <Name>CapaLogica</Name>
     </ProjectReference>
+    <ProjectReference Include="..\CapaModelo\CapaModelo.csproj">
+      <Project>{74775dd6-4c84-4364-ac52-2e550a36bfb0}</Project>
+      <Name>CapaModelo</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\GosueBlockScreen.png" />
@@ -111,6 +117,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\minimize.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
