Se verifica el funcionamiento del contador y arreglo de algunos bugs, con esto se tiene el primer RELEASE para la presentacion del sprint 2

--- a/GosueSportClient/GosueSportClientPresentacion.csproj
+++ b/GosueSportClient/GosueSportClientPresentacion.csproj
@@ -69,6 +69,7 @@
     <Compile Include="TimeCounterForm.Designer.cs">
       <DependentUpon>TimeCounterForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="TimeCounterManager.cs" />
     <EmbeddedResource Include="BlockScreen.resx">
       <DependentUpon>BlockScreen.cs</DependentUpon>
     </EmbeddedResource>
