--- a/CapaModelo/CapaModelo.csproj
+++ b/CapaModelo/CapaModelo.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Common\WebSocketConstants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Request\TimeEndRequest.cs" />
     <Compile Include="Request\WebSocketRequest.cs" />
     <Compile Include="Response\ActionResponse.cs" />
     <Compile Include="Common\TipeAction.cs" />
